--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="https://img.icons8.com/?size=100&id=631pMFDOQtCF&format=png&color=000000" alt="">
             <h1 class="ET">EXPENSE TRACKER</h1>
         </div>
-        <button class="add">ADD</button>h
+        <button class="add">ADD</button>
      </nav>
      <main class="content">
          <p class="no_expenses_yet" >No Expenses Yet.</p>
