--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
      </nav>
      <main class="content">
          <p class="no_expenses_yet" >No Expenses Yet.</p>
+         <div class="box hidden">
+            <input class="input" type="text" id="category" placeholder="Category" />
+            <br>
+            <input class="input" type="number" id="amount" placeholder="Amount" />
+            <br>
+            <input class="input" type="date" id="date"/>
+            <br>
+            <button class="add_expense">
+                ADD EXPENSE
+            </button>
+         </div>
     </main>
 
      <footer>
