added delete button and total system

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
      </nav>
      <main class="content">
          <p class="no_expenses_yet" >No Expenses Yet.</p>
+         <div class="list_expense"></div>
          <div class="box hidden">
             <input class="input" type="text" id="category" placeholder="Category" />
             <br>
@@ -31,7 +32,7 @@
     </main>
 
      <footer>
-        <div class="total">TOTAL:</div>
+        Total: ₹<span class="total_amount">0</span>
      </footer>
 
      <script src="script.js"></script>
